# stellar-prediction-market

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  README_ORIGINAL.txt  SECURITY.md  build_commits.js
app/: create_market.mjs  deploy.mjs  deploy_final.mjs  deploy_fix.mjs  emergency_sync.mjs  fix_now.mjs  generate_sponsor.mjs  package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/admin/: page.tsx
app/app/api/admin/reset/: route.ts
app/app/api/indexer/: route.ts
app/app/api/markets/: route.ts
app/app/api/markets/[id]/: route.ts
app/app/api/reset/: route.ts
app/app/api/sponsor/: route.ts
app/app/api/stats/: route.ts
app/app/api/users/: route.ts
app/app/components/: WalletModal.tsx
app/app/context/: WalletContext.tsx
app/app/create/: page.tsx
app/app/dashboard/: page.tsx
app/app/markets/[id]/: page.tsx
app/app/stats/: page.tsx
app/data/: markets.json  users.json
app/lib/: db.ts  indexer.ts  stellar.ts
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs
contracts/market/: Cargo.toml
contracts/market/src/: lib.rs  test.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
