[package]
name = "soroban-prediction-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-prediction-market = { path = "../market" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
